<resources>
    <string name="app_name">Subject Planner</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="verify_email">verify Email</string>
    <string name="verification_code">verification code</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>

    <string name="cardItem_text1">Here is subject Title</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="subject_title">Subject Title</string>
    <string name="subject_details">Subject Details</string>
    <string name="lectuer_time">Lectuer Time</string>


</resources>