<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/WhiteLogoImageView"
        android:layout_width="match_parent"
        android:layout_height="350sp"

        android:padding="50sp"
        android:src="@drawable/white_logo"></ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/buttonColor"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/loginEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textSize="16sp"
            tools:ignore="LabelFor,VisualLintTextFieldSize,SpeakableTextPresentCheck" />



        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:text="@string/password"
        android:textColor="@color/buttonColor"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/loginPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textSize="16sp"
        tools:ignore="VisualLintTextFieldSize,SpeakableTextPresentCheck" />

   </LinearLayout>





    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:layout_marginTop="40sp"
        android:layout_marginBottom="10sp"
        android:background="@drawable/button_background"
        android:text="@string/log_in"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />
    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40sp"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:background="@drawable/button_background"
        android:text="@string/sign_up"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />


</LinearLayout>