<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.VerifyEmailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="2"
            android:background="@color/buttonColor"></View>
        <View
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:background="@color/white"></View>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/verifyEmailToolbar"
            android:background="@android:color/transparent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_email"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginStart="20sp"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="15"
            android:shadowColor="@android:color/darker_gray"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="We sent you a code to verify your Email."
            android:textColor="@color/white"
            android:textStyle="normal"
            android:textSize="16sp"
            android:layout_marginStart="20sp"
            tools:ignore="HardcodedText" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="450sp"
            android:layout_weight="1"
            android:layout_margin="20sp"
            app:cardCornerRadius="20sp"
            app:cardElevation="10sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="20sp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="70sp"
                    android:layout_marginTop="15sp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/education_learning_19_svgrepo_com">

                    </ImageView>

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:paddingTop="20sp"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:text="@string/email"
                    android:textColor="@color/buttonColor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TextViewEdits" />



                <EditText
                    android:id="@+id/verifyEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textSize="16sp"
                    tools:ignore="LabelFor,VisualLintTextFieldSize,SpeakableTextPresentCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30sp"
                    android:text="@string/verification_code"
                    android:textColor="@color/buttonColor"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/verificationCodeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textSize="16sp"
                    tools:ignore="VisualLintTextFieldSize,SpeakableTextPresentCheck" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/verifyEmailSubmitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40sp"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"
            android:background="@drawable/button_background"
            android:text="@string/verify_email"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

    </LinearLayout>
</RelativeLayout>